--- a/sections/product-recommendations.liquid
+++ b/sections/product-recommendations.liquid
@@ -66,6 +66,7 @@ loadProductRecommendationsIntoSection();
   "name": "Product Recommendations",
   "tag": "section",
   "class": "product-recommendations-section",
+  "limit": 1,
   "disabled_on": {
     "groups": ["header"]
   },
