--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -7,10 +7,10 @@ assign image_height = image_width | divided_by: product.featured_image.aspect_ra
     {% if product.featured_image == blank %}
       {{ 'product-1' | placeholder_svg_tag: "placeholder" }}
     {% else %}
-    <img src="{{ product.featured_image.src | image_url: width: image_width }}"
-      width="{{ image_width }}"
-      height="{{ image_height }}"
-      alt="{{ product.featured_image.alt }}"
+    <img src="{{- product.featured_image.src | image_url: width: image_width -}}"
+      width="{{- image_width -}}"
+      height="{{- image_height -}}"
+      alt="{{- product.featured_image.alt | escape | strip_html | strip_newlines -}}"
       loading="lazy">
       {% endif %}
   </div>
