--- a/assets/theme.css
+++ b/assets/theme.css
@@ -677,6 +677,9 @@ footer ul {
   align-items: flex-start;
   text-align: center;
 }
+footer p a {
+  background-color: transparent;
+}
 
 /* Breadcrumb */
 #breadcrumb {
