--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -12,8 +12,8 @@
     </ul>
     <hr>
     <p class="small-text center">
-      Copyright&copy;{{ "now" | date: "%Y" }}, Ketan Mistry.
-      [Link to whichever licence here]
+      Copyright&copy;{{ "now" | date: "%Y" }}, {{ shop.name }}.
+      <a href="#">License</a>
     </p>
   </div>
 </footer>
