--- a/snippets/schemas.liquid
+++ b/snippets/schemas.liquid
@@ -79,7 +79,7 @@
         "name": "{{ shop.name }}",
         "logo": {
           "@type": "ImageObject",
-          "url": "{{ 'logo-ability.png' | asset_url }}"
+          "url": ""
         }
       },
       "description": "{{ article.excerpt_or_content | strip_html | strip_newlines | escape }}"
