Added extra settings.

--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -363,6 +363,12 @@ function goToImage(index, container=false) {
           "default": "Frequently purchased together"
         },
         {
+          "type": "inline_richtext",
+          "id": "total_label",
+          "label": "Total price label",
+          "default": "Total Price:"
+        },
+        {
           "type": "range",
           "id": "limit",
           "label": "Limit",
