--- a/snippets/purchase-together.liquid
+++ b/snippets/purchase-together.liquid
@@ -25,6 +25,19 @@ endunless
   align-items: flex-start;
   gap: 0.5rem
 }
+.purchase-together-item:nth-child(1n+2):before {
+  content: "+";
+  font-weight: var(--bold);
+  font-size: 1.25rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 1rem;
+  height: 1rem;
+  position: absolute;
+  left: -1rem;
+  top: 60px;
+}
 .purchase-together-item input[type="checkbox"] {
   position: absolute;
   right: 0.25rem;
