--- a/assets/theme.css
+++ b/assets/theme.css
@@ -799,7 +799,9 @@ article img {
   position: relative;
 }
 .image-banner-section img,
-.image-banner-section svg {
+.image-banner-section svg,
+.image-carousel-section img,
+.image-carousel-section svg {
   width: 100%;
   height: 100%;
 }
@@ -819,4 +821,16 @@ article img {
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 5px;
   }
+}
+
+/* Swiper JS */
+.swiper {
+  --swiper-theme-color: var(--black);
+  --swiper-pagination-bottom: 1rem;
+  --swiper-pagination-bullet-size: 0.5rem;
+  --swiper-pagination-bullet-width: 72px;
+  --swiper-pagination-bullet-border-radius: 25px;
+  --swiper-pagination-bullet-horizontal-gap: 0.5rem;
+  --swiper-pagination-bullet-inactive-opacity: 0.5;
+  --swiper-pagination-bullet-inactive-color: var(--black);
 }
