--- a/sections/image-carousel.liquid
+++ b/sections/image-carousel.liquid
@@ -61,6 +61,11 @@ const swiper = new Swiper('{{ section.id | prepend: "#" }}', {
   navigation: {
     nextEl: '.swiper-button-next',
     prevEl: '.swiper-button-prev',
+  },
+  breakpoints: {
+    "768": {
+      slidesPerView: {{ section.settings.slides_per_view }}
+    }
   }
 });
 </script>
@@ -160,6 +165,16 @@ const swiper = new Swiper('{{ section.id | prepend: "#" }}', {
     {
       "type": "header",
       "content": "Carousel Settings"
+    },
+    {
+      "type": "range",
+      "id": "slides_per_view",
+      "label": "Slides per view",
+      "info": "Number of slides to show per view on desktop.",
+      "min": 1,
+      "max": 3,
+      "step": 1,
+      "default": 1
     },
     {
       "type": "checkbox",
