--- a/sections/multicolumn.liquid
+++ b/sections/multicolumn.liquid
@@ -73,7 +73,7 @@ assign columns = section.blocks.size
 
 {% schema %}
 {
-  "name": "Columns",
+  "name": "Columns/Richtext",
   "tag": "section",
   "class": "columns-section",
   "disabled_on": {
@@ -81,7 +81,7 @@ assign columns = section.blocks.size
   },
   "presets": [
     {
-      "name": "Columns",
+      "name": "Columns/Richtext",
       "blocks": [
         {
           "type": "column"
@@ -93,6 +93,10 @@ assign columns = section.blocks.size
     {
       "type": "paragraph",
       "content": "A section made up of a maximum of 4 columns. Each column can have an image, heading, content and button."
+    },
+    {
+      "type": "paragraph",
+      "content": "This can also be used to display a single column that fills the width of the website."
     },
     {
       "type": "header",
