--- a/sections/product-recommendations.liquid
+++ b/sections/product-recommendations.liquid
@@ -35,7 +35,7 @@ var loadProductRecommendationsIntoSection = function() {
   // Read limit from data attribute
   var limit = productRecommendationsSection.dataset.limit;
   // Build request URL
-  var requestUrl = "/recommendations/products?section_id=product-recommendations&limit=" + limit + "&product_id=" + productId;
+  var requestUrl = "{{ routes.product_recommendations_url }}?section_id=product-recommendations&limit=" + limit + "&product_id=" + productId;
   // Create request and submit it using Ajax
   var request = new XMLHttpRequest();
   request.open("GET", requestUrl);
