--- a/snippets/breadcrumb.liquid
+++ b/snippets/breadcrumb.liquid
@@ -11,7 +11,7 @@ This version checks against the linklist path to return a true breadcrumb.
   <div class="section">
 
     <ol aria-label="Breadcrumb" class="flex align-left small-text">
-      <li><a href="/" title="Home">Home</a></li>
+      <li><a href="{{ routes.root_url }}" title="Home">Home</a></li>
 
       {% comment %}
       If this is a PRODUCT, use the linklist to find its true path.
